...
        VStack {
            HStack(alignment: .center) {
                Text(isNoteSaved ? "Done" : "Cancel")
                    .font(.nunitoBold(size: 14))
                    .padding(.vertical, 10)
                    .foregroundColor(Color(Asset.cancelText.name))
                    .accessibilityIdentifier(isNoteSaved ? "btn_done_create_note" : "btn_cancel_create_note")
                    .onTapGesture {
                        self.presentationMode.wrappedValue.dismiss()
                    }
                
                Spacer()
                
...
                    .frame(width: 68, height: 32)
                    .background(
                        Color(hex: "SaveButtonBackground")
                    )
                    .clipShape(RoundedRectangle(cornerRadius: 5))
                })
                .accessibilityIdentifier("btn_save_note")
                .disabled(isNoteSaved || isSaveInProgress || accountId.isEmpty || text.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty)
                .opacity(accountId.isEmpty || text.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty ? 0.7 : 1)
            }
            .padding(.vertical, 12)
            
            HStack {
...
                        HStack(alignment: .center) {
                            Text(accountId.isEmpty ? "Select": accountName)
                                .padding(.vertical, 8)
                                .padding(.horizontal, 6)
                                .foregroundColor(Color(Asset.redHighlight.name))
                                .font(.nunitoLight(size: 14))
                                .accessibilityIdentifier(accountId.isEmpty ? "txt_create_note_select_account" : "txt_create_note_selected_account")
                            Image(Asset.arrowDown.name)
                                .frame(width: 7, height: 4)
                                .padding(.trailing, 6)
                                .accessibilityIdentifier( "img_create_note_select_account")
                        }
                    }
...
                        
                    } else {
                        TextField("Add Note", text: $text, axis: .vertical)
                            .foregroundColor(Color(Asset.textPrimary.name))
                            .font(.nunitoSemiBold(size: 18))
                            .focused($focused)
                            .accessibilityIdentifier("et_create_note")
                            .onTapGesture {
                                // Do nothing. Kept on tap here to override tap action over parent tap action
                            }
                            .lineLimit(4...)
                        
                    }
...
                        } else {
                            HStack {
                                Image(Asset.sparkle.name)
                                Text("We have some recommendations")
                                    .foregroundColor(Color(Asset.textPrimary.name))
                                    .font(.nunitoSemiBold(size: 16))
                                    .accessibilityIdentifier("txt_create_note_recommendations")
                                
                                Spacer()
                                Button {
                                    isPopoverVisible.toggle()
                                } label: {
                                    Image(Asset.addIcon.name)
...
