...
                        Text(AlertViewModel.shared.alert?.submitText ?? "Submit")
                            .font(.system(size: 17, weight: .semibold))
                            .foregroundColor(Color(Asset.alertSubmitButtonForeground.name))
                            .accessibilityIdentifier("txt_alert_submit")
                    }
                    )
                    .accessibilityIdentifier("btn_alert_submit")
                    .padding(.vertical)
                    .frame(maxWidth: .infinity)
                }
            }
            .background(Color(Asset.alertModalBackground.name))
            .cornerRadius(14)
...
