...
                            .accessibilityIdentifier("btn_add_account")
                    }
                Image(Asset.magnifyingGlass.name)
                    .onTapGesture {
                        showAccountSearchView = true
                    }
                    .accessibilityIdentifier("btn_search_account")
                    .sheet(isPresented: $showAccountSearchView) {
                        AccountSearchView(isPresented: $showAccountSearchView, onAccountSelected: { accountId, accountName in
                            
                            // Use ID to push view to navigation link
                            selectedAccountId = accountId
                            selectedAccountName = accountName
...
